cmake_minimum_required(VERSION 3.19)
project(projeto_aed)

set(CMAKE_CXX_STANDARD 14)

add_executable(projeto_aed
        main.cpp
        Voo.cpp
        Voo.h
        Aeroporto.cpp
        Aeroporto.h
        Passageiro.cpp
        Passageiro.h
        Transporte.cpp
        Transporte.h
        Time.cpp
        Time.h
        servico.cpp
        servico.h
        Data.cpp
        Data.h
        Funcionario.cpp
        Funcionario.h
        Aviao.cpp
        Aviao.h
        )
