cmake_minimum_required(VERSION 3.19)
project(projeto-aed)

set(CMAKE_CXX_STANDARD 14)

add_executable(projeto-aed main.cpp Voo.cpp Voo.h Aviao.h Aviao.cpp Aeroporto.cpp Aeroporto.h Passageiro.cpp Passageiro.h Transporte.cpp Transporte.h Time.cpp Time.h Date.cpp Date.h binaryTree.h bst.h Funcionario.cpp Funcionario.h servico.cpp servico.h TransporteBagagem.cpp TransporteBagagem.h Bagagem.cpp Bagagagem.h Bilhete.cpp Bilhete.h)