cmake_minimum_required(VERSION 3.19)
project(projeto_aed)

set(CMAKE_CXX_STANDARD 14)

add_executable(projeto_aed main.cpp Voo.cpp Voo.h Aviao.h Aviao.cpp Aeroporto.cpp Aeroporto.h Passageiro.cpp Passageiro.h Transporte.cpp Transporte.h Time.cpp Time.h Date.cpp Date.h binaryTree.h bst.h servico.cpp servico.h TransporteBagagem.cpp TransporteBagagem.h Bagagem.cpp Bagagem.h Bilhete.cpp Bilhete.h BaseDados.cpp BaseDados.h)